Fix cell vertical-alignment when field label is in header row

--- a/css/default.css
+++ b/css/default.css
@@ -112,6 +112,7 @@ td.category			{ background-color: #F6E6CB; color: #212121; vertical-align: top;
 	background: linear-gradient(#FCF5ED, #F6E6CB);
 	font-weight: bold;
 }
+tr.header > td.category	{ vertical-align: middle; }
 tr.bug-primary td	{ font-size: 8pt; vertical-align: top; }
 td.overdue			{ background-color: #ff6060; color: #212121; font-weight: bold; }
 td.disabled			{ background-color: #E2E2DA; color: #4A727F; padding-left: 20px; font-style: italic; font-weight: normal; }
